--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ You can install the latest development version from [GitHub](https://github.com/
 
 ```r
 #install.packages("remotes")
-remotes::install.github("jobstdavid/eppverification")
+remotes::install_github("jobstdavid/eppverification")
 ```
 
 ## Package overview
@@ -255,7 +255,7 @@ box.plot(x = x, names = names, x.lab = "Models", y.lab = "Values")
 
 ## Contact
 
-Feel free to contact jobst@imai.uni-hildesheim.de if you have any questions or sugggestions.
+Feel free to contact jobst@imai.uni-hildesheim.de if you have any questions or suggestions.
 
 ## References
 
