--- a/README.Rmd
+++ b/README.Rmd
@@ -12,13 +12,13 @@ knitr::opts_chunk$set(
 ```
 
 
-# eppverification: Verification Tools for the Statistical Postprocessing of Ensemble Forecasts 
+# eppverification: Verification Tools for the Statistical Postprocessing of Ensemble Forecasts <img src='man/figures/sticker.png' align="right" height="150" />
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/eppverification)](https://CRAN.R-project.org/package=eppverification)
 [![R-CMD-check](https://github.com/jobstdavid/eppverification/workflows/R-CMD-check/badge.svg)](https://github.com/jobstdavid/eppverification/actions)
 [![codecov](https://codecov.io/gh/jobstdavid/eppverification/branch/master/graph/badge.svg?token=WJ7XWFO9PT)](https://codecov.io/gh/jobstdavid/eppverification)
-[![version](https://img.shields.io/badge/version-0.1.0-green.svg?style=flat)](https://github.com/jobstdavid/eppverification)
-[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.5574573.svg)](https://doi.org/10.5281/zenodo.5574573)
+[![version](https://img.shields.io/badge/version-0.2.0-green.svg?style=flat)](https://github.com/jobstdavid/eppverification)
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.5574572.svg)](https://doi.org/10.5281/zenodo.5574572)
 <!-- badges: end -->
 
 
@@ -44,17 +44,18 @@ The goal of probabilistic forecasting is to maximize the **sharpness** of the pr
 In the following you find univariate and multivariate verification tools for calibration, sharpness and proper scoring rules, where the corresponding function provided within this package is written in brackets. 
 
 ### Univariate Verification Tools
-* **Calibration**: Verification Rank Histogram (`vr.hist`), Reliability Index (`ri`), PIT Histogram (`pit.hist`), Central Prediction Interval Coverage  (`cpi`). 
+* **Calibration**: Verification Rank Histogram (`vr.hist`), Reliability Index (`ri`), Entropy (`ent`), PIT Histogram (`pit.hist`), Central Prediction Interval Coverage  (`cpi`). 
 * **Sharpness**: Root Mean Variance  (`rmv`), Variance of PIT-Values  (`var.pit`), Central Prediction Interval Width  (`cpi`).
 * **Proper Scoring Rules**: Continuous Ranked Probability Score (`crps`), Logarithmic Score (`logs`), Interval Score (`is`), Quantile Score (`qs`),  Brier Score (`bs`), Dawid-Sebastiani Score (`dss`), Absolute Error (`ae`), Squared Error (`se`).
 
 ### Multivariate Verification Tools
-* **Calibration**: Multivariate Verification Rank Histogram (`mvr.hist`), Multivariate Reliability Index (`mri`). 
+* **Calibration**: Multivariate Verification Rank Histogram (`mvr.hist`), Multivariate Reliability Index (`mri`), Multivariate Entropy (`ment`).
 * **Sharpness**: Determinant Sharpness (`ds`).
 * **Proper Scoring Rules**: Energy Score (`es`), Euclidean Error (`ee`), Variogram Score (`vs`).
 
 Further functions for **model comparison and visualizations** in this package are: 
 
+* `dm.test`: This function performs a Diebold-Mariano-Test for two forecasts.
 * `cpi.plot`: This function plots the central prediction intervals for a certain interval range.
 * `cov.plot`: This function plots the central prediction interval coverage for certain interval ranges of different models. 
 * `line.plot`: This function creates line plots.
@@ -83,7 +84,7 @@ y <- rnorm(n)
 x <- matrix(rnorm(n*m), ncol = m)
 
 #Verification Rank Histogram
-vr.hist(y = y, x = x, bins = 17, ri = TRUE)
+vr.hist(y = y, x = x, bins = 3, ri = TRUE, ent = TRUE)
 ```
 
 ```{r example3}
@@ -92,7 +93,7 @@ n <- 10000
 u <- runif(n)
 
 #PIT Histogram
-pit.hist(u = u, bins = 5, var = TRUE)
+pit.hist(u = u, bins = 5, var = TRUE, m = TRUE)
 
 ```
 
@@ -181,6 +182,16 @@ ee(y = y, x = x, method = "median", mean = FALSE)
 
 ```{r example10}
 #simulated data
+n <- 365
+s1 <- runif(n)
+s2 <- s1 - 0.2
+
+#Diebold-Mariano-Test
+dm.test(s1, s2, alternative = "two.sided", h = 1)
+```
+
+```{r example11}
+#simulated data
 n <- 30
 x <- seq(Sys.Date(), by = "day", length.out = n)
 y <- rnorm(n, mean = 1:n)
@@ -193,7 +204,7 @@ upper <- qnorm((1-alpha/2), rnorm(n, mean = 1:n))
 cpi.plot(x = x, y = y, lower = lower, upper = upper, interval.range = interval.range, x.lab = "Date", y.lab = "Value", info = TRUE)
 ```
 
-```{r example11}
+```{r example12}
 #simulated data
 n <- 30
 x <- matrix(runif(n)*100, ncol = 3)
@@ -205,7 +216,7 @@ models <- c("A", "B", "C")
 cov.plot(x = x, models = models, interval.range = interval.range)
 ```
 
-```{r example12}
+```{r example13}
 #simulated data
 n <- 30
 k <- 10
@@ -220,7 +231,7 @@ colors <- c("red", rep("black", k-3), rep("steelblue", 2))
 line.plot(x = x, y = y, names = names, linetypes = linetypes, colors = colors, x.lab = "Date", y.lab = "Value", legend = "bottom")
 ```
 
-```{r example13}
+```{r example14}
 #simulated data
 x <- matrix(c(0.5, 0.3, 0.8, 0.21, 1.5, 0.7, 2, 1), byrow = TRUE, ncol = 4)
 models <- c("A", "B", "C", "D")
@@ -230,7 +241,7 @@ measures <- c("CRPS", "LogS")
 score.plot(x = x, models = models, measures = measures)
 ```
 
-```{r example14}
+```{r example15}
 #simulated data
 coordinates <- c(13.38, 52.53, 16.36, 48.21, 19.04, 47.50, 21.02, 52.24, 2.35, 48.86, -0.13, 51.51, -3.70, 40.42, 12.50, 41.90, -9.14, 38.74)
 coordinates <- matrix(coordinates, ncol = 2, byrow = TRUE)
@@ -243,7 +254,7 @@ colors <- c("red", "red", "steelblue", "red", "steelblue", "red", "red", "steelb
 map.plot(coordinates = coordinates, names = names, maptype = "terrain-background", size = size, shape = shape, colors = colors)
 ```
 
-```{r example15}
+```{r example16}
 #simulated data
 n <- 30
 x <- cbind(rnorm(n), rgamma(n, shape = 1))
