--- a/README.Rmd
+++ b/README.Rmd
@@ -183,8 +183,8 @@ ee(y = y, x = x, method = "median", mean = FALSE)
 ```{r example10}
 #simulated data
 n <- 365
-s1 <- runif(n)
-s2 <- s1 - 0.2
+s1 <- arima.sim(list(ar = 0.7), sd = 0.5, 100)
+s2 <- arima.sim(list(ar = 0.7), sd = 0.5, 100) - 0.2
 
 #Diebold-Mariano-Test
 dm.test(s1, s2, alternative = "two.sided", h = 1)
